# jobowalls

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  GUI_PLAN.md  PLAN.md  README.md  RELEASE_NOTES.md  SHELL_PLAN.md  TEST_PLAN.md  build.rs  install.sh  uninstall.sh
.github/workflows/: release.yml
contrib/: jobowalls-restore.service
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: EmptyState.tsx  FilmRoll.tsx  MediaPreview.tsx  PickerControls.tsx  PreviewStage.tsx
gui/src/lib/: invoke.ts  media.ts  types.ts
packaging/arch/: PKGBUILD  README.md
packaging/linux/: dev.jobowalls.picker.desktop  jobowalls-gui
scripts/: check-version.sh
src/: cli.rs  collection.rs  collections_store.rs  command.rs  config.rs  lib.rs  main.rs  media.rs  monitors.rs  orchestrator.rs  state.rs  theme_collections.rs
src/backends/: awww.rs  hyprpaper.rs  model.rs  mpvpaper.rs  swaybg.rs
src/shell/: app.rs  apply.rs  cli.rs  layer.rs  mod.rs  model.rs  preview.rs  scanner.rs  state.rs  style.css
src/shell/widgets/: carousel.rs  empty.rs  mod.rs  thumbnail.rs
tests/: cli_integration.rs  install_scripts.rs
