[package]
name = "jobowalls"
version = "0.1.7"
edition = "2024"
description = "Jobowalls wallpaper orchestration for static and live Hyprland wallpapers"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing", "serde"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.10"
