[package]
name = "jobowalls-gui"
version = "0.1.4"
description = "Minimal visual picker for jobowalls"
authors = ["jobowalls"]
edition = "2021"

[lib]
name = "jobowalls_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jobowalls-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset"] }
